@@ -107,6 +107,7 @@ This feature was developed by Matt Westcott, and sponsored by [YouGov](https://y
  * Prevent obstructing the outline around rich text fields (Thibaud Colas)
  * Page editor dropdowns now use indigo backgrounds like elsewhere in the admin interface (Thibaud Colas)
  * Allow parsing of multiple key/value pairs from string in `wagtail.search.utils.parse_query_string` (Beniamin Bucur)
+ * Prevent memory exhaustion when purging a large number of revisions (Jake Howard)
 
 ### Documentation
 
